Enhance TnTNavLink styling and hover interactions
- Updated `ElementClass` in `TnTNavLink.cs` to conditionally enable elevation based on the `Appearance` property for improved styling.
- Refined hover state in `_interactivity.scss` to prevent box-shadow on underlined `tnt-nav-link` elements, enhancing visual consistency.

--- a/TnTComponents/Styles/TnTComponents/_interactivity.scss
+++ b/TnTComponents/Styles/TnTComponents/_interactivity.scss
@@ -22,7 +22,7 @@ $elevation-shadows: ( //
 }
 
 .tnt-interactable {
-    &:hover:not(:active) {
+    &:hover:not(:active):not(.tnt-underlined.tnt-nav-link) {
         box-shadow: map.get($elevation-shadows, 1);
     }
 
