Refactor TnTLayout and update related styles and scripts
- Updated `TnTLayout.razor` to inherit from `TnTComponentBase`.
- Removed `JsModulePath` from `TnTLayout.razor.cs`.
- Deleted all functions from `TnTLayout.razor.js`.
- Introduced a new grid-based layout in `_layout.scss`.
- Enhanced responsiveness and transitions in layout styles.
- Set `overflow-x` to `clip` in `style.scss`.
- Updated `PackageTags` in `TnTComponents.csproj` to include "Material Design".
- Added `EnforceCodeStyleInBuild` property in the project file.
- Removed `bodyScrollListener` function from `TnTComponents.lib.module.js`.

--- a/TnTComponents/Layout/TnTLayout.razor
+++ b/TnTComponents/Layout/TnTLayout.razor
@@ -1,8 +1,7 @@
 ﻿@using TnTComponents.Core
-@inherits TnTPageScriptComponent<TnTLayout>
+@inherits TnTComponentBase
 @namespace TnTComponents
 
 <div @attributes="AdditionalAttributes" class="@ElementClass" style="@ElementStyle" lang="@ElementLang" id="@ElementId" title="@ElementTitle" @ref="Element">
     @ChildContent
 </div>
-@PageScript
