--- a/TnTComponents/Styles/TnTComponents/_layout.scss
+++ b/TnTComponents/Styles/TnTComponents/_layout.scss
@@ -1,40 +1,108 @@
-﻿.tnt-layout {
-    .tnt-header, .tnt-footer {
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-        transition: ease-in-out 250ms;
-        align-items: center;
-        position: fixed;
-        padding: 0 8px;
-        box-sizing: border-box;
-        z-index: 999;
-        @extend .tnt-title-large;
+﻿
+// Grid setup
+.tnt-layout {
+    display: grid;
+    height: 100vh;
+    width: 100vw;
+    grid-template-columns: 1fr;
+
+    &:has(.tnt-side-nav):has(.tnt-footer):has(.tnt-header) {
+        grid-template-areas: "sidenav header" "sidenav body" "sidenav footer";
     }
 
-    .tnt-header {
-        height: $tnt-header-height;
-        top: 0;
+    &:has(.tnt-header):has(.tnt-footer):not(:has(.tnt-side-nav)) {
+        grid-template-areas: "header" "body" "footer";
+    }
+
+    &:has(.tnt-header):not(:has(.tnt-footer)):not(:has(.tnt-side-nav)) {
+        grid-template-areas: "header" "body";
+    }
+
+    &:has(.tnt-footer):not(:has(.tnt-header)):not(:has(.tnt-side-nav)) {
+        grid-template-areas: "body" "footer";
+    }
+
+    &:has(.tnt-side-nav):not(:has(.tnt-header)):not(:has(.tnt-footer)) {
+        grid-template-areas: "sidenav" "body";
+    }
+
+    &:has(.tnt-header):has(.tnt-side-nav):not(:has(.tnt-footer)) {
+        grid-template-areas: "sidenav header" "sidenav body";
+    }
+
+    &:not(:has(.tnt-header)):has(.tnt-side-nav):has(.tnt-footer) {
+        grid-template-areas: "sidenav body" "sidenav footer";
+    }
+
+    &:has(.tnt-side-nav) {
+        grid-template-columns: $tnt-side-nav-width 1fr;
+    }
+
+    &:has(.tnt-header):not(:has(.tnt-footer)) {
+        grid-template-rows: $tnt-header-height 1fr;
+    }
+
+    &:not(:has(.tnt-header)):has(.tnt-footer) {
+        grid-template-rows: 1fr $tnt-footer-height;
+    }
+
+    &:has(.tnt-header):has(.tnt-footer) {
+        grid-template-rows: $tnt-header-height 1fr $tnt-footer-height;
+    }
+
+    div:has(.tnt-header) {
+        grid-area: header;
     }
 
     .tnt-footer {
-        height: $tnt-footer-height;
-        bottom: 0;
+        grid-area: footer;
     }
 
     .tnt-body {
-        height: 100vh;
-        width: 100vw;
-        padding: 8px;
-        box-sizing: border-box;
-        overflow: auto;
-        transition: padding 250ms ease-in-out;
+        grid-area: body;
     }
 
     .tnt-side-nav {
-        position: fixed;
-        left: 0;
-        top: 0;
+        grid-area: sidenav;
+    }
+}
+
+.tnt-layout {
+    transition: 250ms ease-in-out;
+
+    .tnt-body {
+        padding: 8px;
+        box-sizing: border-box;
+        overflow-y: auto;
+        overflow-x: clip;
+    }
+
+    &:has(.tnt-header) {
+        .tnt-body {
+            padding-top: 0;
+        }
+    }
+
+    .tnt-header, .tnt-footer {
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        box-sizing: border-box;
+        padding: 0 8px;
+        transition: 250ms ease-in-out;
+        @extend .tnt-title-large;
+    }
+
+    &:has(.tnt-side-nav) {
+        .tnt-header, .tnt-footer {
+            width: calc(100% + 16px);
+            transform: translateX(-16px);
+            padding-left: 24px;
+        }
+    }
+
+    .tnt-side-nav {
         z-index: 1000;
         height: 100%;
         width: $tnt-side-nav-width;
@@ -142,39 +210,10 @@
         }
     }
 
-
-    &:has(.tnt-header):not(:has(.tnt-footer)) {
-        .tnt-body {
-            margin-top: $tnt-header-height;
-            height: calc(100vh - $tnt-header-height);
-        }
-    }
-
-    &:has(.tnt-footer):not(:has(.tnt-header)) {
-        .tnt-body {
-            margin-bottom: $tnt-footer-height;
-            height: calc(100vh - $tnt-footer-height);
-        }
-    }
-
-    &:has(.tnt-header):has(.tnt-footer) {
-        .tnt-body {
-            margin-top: $tnt-header-height;
-            margin-bottom: $tnt-footer-height;
-            height: calc(100vh - $tnt-header-height - $tnt-footer-height);
-        }
-    }
-
     @media #{$medium-and-up} {
         &:has(.tnt-side-nav:not(.tnt-side-nav-hide-on-large)) {
-            .tnt-header, .tnt-footer, .tnt-body {
-                padding-left: calc($tnt-side-nav-width + 8px);
-            }
-
             &:has(.tnt-side-nav-toggle-indicator .tnt-toggle-indicator.tnt-toggle) {
-                .tnt-header, .tnt-footer, .tnt-body {
-                    padding-left: 8px;
-                }
+                grid-template-columns: 0 1fr;
 
                 .tnt-side-nav {
                     transform: translate(-105%);
@@ -183,18 +222,14 @@
         }
 
         &:has(.tnt-side-nav.tnt-side-nav-hide-on-large) {
-            .tnt-header, .tnt-footer, .tnt-body {
-                padding-left: 8px;
-            }
+            grid-template-columns: 0 1fr;
 
             .tnt-side-nav {
                 transform: translate(-105%);
             }
 
             &:has(.tnt-side-nav-toggle-indicator .tnt-toggle-indicator.tnt-toggle) {
-                .tnt-header, .tnt-footer, .tnt-body {
-                    padding-left: calc($tnt-side-nav-width + 8px);
-                }
+                grid-template-columns: $tnt-side-nav-width 1fr;
 
                 .tnt-side-nav {
                     transform: translate(0);
@@ -204,14 +239,16 @@
     }
 
     @media #{$small-and-down} {
+        grid-template-columns: 0 1fr !important;
+
         .tnt-side-nav {
             transform: translateX(-105%);
         }
 
-
         &:has(.tnt-side-nav-toggle-indicator .tnt-toggle-indicator.tnt-toggle) {
+
             .tnt-header {
-                transform: translateX(calc($tnt-side-nav-width + 8px));
+                transform: translateX(calc($tnt-side-nav-width - 16px));
             }
 
             .tnt-side-nav {
