Enhance layouts and content in TabView and NestedLayout
- Updated `TabViewComponent.razor` with detailed Lorem Ipsum text.
- Introduced `NestedLayout.razor` for structured navigation with header, side nav, body, and footer.
- Modified `MainLayout.razor` to include a link to the new "Nested Layout."
- Refined CSS selectors in `_layout.scss` for better specificity and performance.
- Simplified `_tabview.scss` by removing the `.tnt-components` class from the `tnt-tab-view` selector.

--- a/LiveTest/LiveTest.Client/Pages/NestedLayout.razor
+++ b/LiveTest/LiveTest.Client/Pages/NestedLayout.razor
@@ -1,23 +1,15 @@
-﻿@using TnTComponents
-@inherits LayoutComponentBase
+﻿@page "/nestedLayout"
+@using TnTComponents
 
-<TnTLayout>
-    <TnTHeader>
-        <TnTSideNavToggle>
-            <MaterialIcon Icon="@MaterialIcon.Menu" />
-        </TnTSideNavToggle>
-        <TnTThemeToggle />
-        This is my header
-    </TnTHeader>
-    <TnTBody>
-        @Body
-    </TnTBody>
 
-    <TnTFooter>
-        Footer content
-    </TnTFooter>
-    <TnTSideNav HideOnLargeScreens="true">
-        <h3>
+<TnTComponents.TnTLayout>
+    <TnTComponents.TnTHeader>
+        Header Content
+        <TnTComponents.TnTSideNavToggle />
+    </TnTComponents.TnTHeader>
+
+    <TnTComponents.TnTSideNav>
+       <h3>
             My First Headline
         </h3>
         <TnTSideNavLink Label="Home" href="/" Match="NavLinkMatch.All" Disabled="true" />
@@ -51,9 +43,12 @@
         <TnTSideNavLink Label="Typeahead" href="/typeahead" />
         <TnTSideNavLink Label="Virtualize" href="/InfiniteScroll" Icon="@MaterialIcon.Info" />
         <TnTSideNavLink Label="Wizard" href="/Wizard" Icon="@MaterialIcon.Image" />
-    </TnTSideNav>
+    </TnTComponents.TnTSideNav>
 
-</TnTLayout>
-
-<TnTDialog @rendermode="InteractiveAuto" />
-<TnTToast @rendermode="InteractiveAuto" />
+    <TnTComponents.TnTBody>
+        Some body content
+    </TnTComponents.TnTBody>
+    <TnTComponents.TnTFooter>
+        Nested footer
+    </TnTComponents.TnTFooter>
+</TnTComponents.TnTLayout>
