--- a/TnTComponents/Styles/TnTComponents/_layout.scss
+++ b/TnTComponents/Styles/TnTComponents/_layout.scss
@@ -6,63 +6,63 @@
     width: 100vw;
     grid-template-columns: 1fr;
 
-    &:has(.tnt-side-nav):has(.tnt-footer):has(.tnt-header) {
+    &:has(> .tnt-side-nav):has(> .tnt-footer):has(> .tnt-header) {
         grid-template-areas: "sidenav header" "sidenav body" "sidenav footer";
     }
 
-    &:has(.tnt-header):has(.tnt-footer):not(:has(.tnt-side-nav)) {
+    &:has(> .tnt-header):has(> .tnt-footer):not(:has(> .tnt-side-nav)) {
         grid-template-areas: "header" "body" "footer";
     }
 
-    &:has(.tnt-header):not(:has(.tnt-footer)):not(:has(.tnt-side-nav)) {
+    &:has(> .tnt-header):not(:has(> .tnt-footer)):not(:has(> .tnt-side-nav)) {
         grid-template-areas: "header" "body";
     }
 
-    &:has(.tnt-footer):not(:has(.tnt-header)):not(:has(.tnt-side-nav)) {
+    &:has(> .tnt-footer):not(:has(> .tnt-header)):not(:has(> .tnt-side-nav)) {
         grid-template-areas: "body" "footer";
     }
 
-    &:has(.tnt-side-nav):not(:has(.tnt-header)):not(:has(.tnt-footer)) {
+    &:has(> .tnt-side-nav):not(:has(> .tnt-header)):not(:has(> .tnt-footer)) {
         grid-template-areas: "sidenav" "body";
     }
 
-    &:has(.tnt-header):has(.tnt-side-nav):not(:has(.tnt-footer)) {
+    &:has(> .tnt-header):has(> .tnt-side-nav):not(:has(> .tnt-footer)) {
         grid-template-areas: "sidenav header" "sidenav body";
     }
 
-    &:not(:has(.tnt-header)):has(.tnt-side-nav):has(.tnt-footer) {
+    &:not(:has(> .tnt-header)):has(> .tnt-side-nav):has(> .tnt-footer) {
         grid-template-areas: "sidenav body" "sidenav footer";
     }
 
-    &:has(.tnt-side-nav) {
+    &:has(> .tnt-side-nav) {
         grid-template-columns: $tnt-side-nav-width 1fr;
     }
 
-    &:has(.tnt-header):not(:has(.tnt-footer)) {
+    &:has(> .tnt-header):not(:has(> .tnt-footer)) {
         grid-template-rows: $tnt-header-height 1fr;
     }
 
-    &:not(:has(.tnt-header)):has(.tnt-footer) {
+    &:not(:has(> .tnt-header)):has(> .tnt-footer) {
         grid-template-rows: 1fr $tnt-footer-height;
     }
 
-    &:has(.tnt-header):has(.tnt-footer) {
+    &:has(> .tnt-header):has(> .tnt-footer) {
         grid-template-rows: $tnt-header-height 1fr $tnt-footer-height;
     }
 
-    div:has(.tnt-header) {
+    > .tnt-header {
         grid-area: header;
     }
 
-    .tnt-footer {
+    > .tnt-footer {
         grid-area: footer;
     }
 
-    .tnt-body {
+    > .tnt-body {
         grid-area: body;
     }
 
-    .tnt-side-nav {
+    > .tnt-side-nav {
         grid-area: sidenav;
     }
 }
@@ -70,20 +70,28 @@
 .tnt-layout {
     transition: 250ms ease-in-out;
 
-    .tnt-body {
+    > .tnt-body {
         padding: 8px;
         box-sizing: border-box;
         overflow-y: auto;
         overflow-x: clip;
+
+        &:has(> .tnt-layout) {
+            padding: 0;
+
+            .tnt-layout {
+                height: 100%;
+            }
+        }
     }
 
-    &:has(.tnt-header) {
-        .tnt-body {
+    &:has(> .tnt-header) {
+        > .tnt-body {
             padding-top: 0;
         }
     }
 
-    .tnt-header, .tnt-footer {
+    > .tnt-header, > .tnt-footer {
         height: 100%;
         display: flex;
         flex-direction: row;
@@ -94,15 +102,15 @@
         @extend .tnt-title-large;
     }
 
-    &:has(.tnt-side-nav) {
-        .tnt-header, .tnt-footer {
+    &:has(> .tnt-side-nav) {
+        > .tnt-header, > .tnt-footer {
             width: calc(100% + 16px);
             transform: translateX(-16px);
             padding-left: 24px;
         }
     }
 
-    .tnt-side-nav {
+    > .tnt-side-nav {
         z-index: 1000;
         height: 100%;
         width: $tnt-side-nav-width;
@@ -112,7 +120,7 @@
         transition: 250ms ease-in-out;
         overflow-y: auto;
 
-        h1, h2, h3, h4, h5, h6 {
+        > h1, > h2, > h3, > h4, > h5, > h6 {
             @extend .tnt-title-small;
         }
 
@@ -162,7 +170,7 @@
         transition: color 250ms ease-in-out;
     }
 
-    .tnt-side-nav-menu-group {
+    >.tnt-side-nav .tnt-side-nav-menu-group {
         max-height: 50px;
         overflow: hidden;
         transition: max-height 250ms ease-in-out;
@@ -211,8 +219,8 @@
     }
 
     @media #{$medium-and-up} {
-        &:has(.tnt-side-nav:not(.tnt-side-nav-hide-on-large)) {
-            &:has(.tnt-side-nav-toggle-indicator .tnt-toggle-indicator.tnt-toggle) {
+        &:has(> .tnt-side-nav:not(> .tnt-side-nav-hide-on-large)) {
+            &:has(> .tnt-side-nav-toggle-indicator .tnt-toggle-indicator.tnt-toggle) {
                 grid-template-columns: 0 1fr;
 
                 .tnt-side-nav {
@@ -221,17 +229,17 @@
             }
         }
 
-        &:has(.tnt-side-nav.tnt-side-nav-hide-on-large) {
+        &:has(> .tnt-side-nav.tnt-side-nav-hide-on-large) {
             grid-template-columns: 0 1fr;
 
-            .tnt-side-nav {
+            > .tnt-side-nav {
                 transform: translate(-105%);
             }
 
-            &:has(.tnt-side-nav-toggle-indicator .tnt-toggle-indicator.tnt-toggle) {
+            &:has(> .tnt-side-nav-toggle-indicator .tnt-toggle-indicator.tnt-toggle) {
                 grid-template-columns: $tnt-side-nav-width 1fr;
 
-                .tnt-side-nav {
+                > .tnt-side-nav {
                     transform: translate(0);
                 }
             }
@@ -239,20 +247,20 @@
     }
 
     @media #{$small-and-down} {
-        &:has(.tnt-side-nav) {
+        &:has(> .tnt-side-nav) {
             grid-template-columns: 0 1fr !important;
 
-            .tnt-side-nav {
+            > .tnt-side-nav {
                 transform: translateX(-105%);
             }
 
-            &:has(.tnt-side-nav-toggle-indicator .tnt-toggle-indicator.tnt-toggle) {
+            &:has(> .tnt-side-nav-toggle-indicator .tnt-toggle-indicator.tnt-toggle) {
 
-                .tnt-header {
+                > .tnt-header {
                     transform: translateX(calc($tnt-side-nav-width - 16px));
                 }
 
-                .tnt-side-nav {
+                > .tnt-side-nav {
                     transform: translate(0%);
                 }
             }
