Update grid layout for sidenav and body arrangement
- Modify `grid-template-areas` in `_layout.scss` to
  place sidenav and body in the same row for a more
  compact layout.

--- a/TnTComponents/Styles/TnTComponents/_layout.scss
+++ b/TnTComponents/Styles/TnTComponents/_layout.scss
@@ -23,7 +23,7 @@
     }
 
     &:has(> .tnt-side-nav):not(:has(> .tnt-header)):not(:has(> .tnt-footer)) {
-        grid-template-areas: "sidenav" "body";
+        grid-template-areas: "sidenav body";
     }
 
     &:has(> .tnt-header):has(> .tnt-side-nav):not(:has(> .tnt-footer)) {
