--- a/TnTComponents/Virtualization/TnTVirtualize.razor
+++ b/TnTComponents/Virtualization/TnTVirtualize.razor
@@ -15,7 +15,7 @@
         }
     }
 }
-else if (!_loading) {
+else if (_allItemsRetrieved) {
     if (EmptyTemplate is not null) {
         @EmptyTemplate
     }
@@ -23,8 +23,9 @@ else if (!_loading) {
         <text>No items to show</text>
     }
 }
-
-@if (_loading) {
+<div style="@(_allItemsRetrieved ? "height:0;width:0" : "height:1px;width:1px;flex-shrink:0")" @ref="Element">
+</div>
+@if (!_allItemsRetrieved) {
     if (LoadingTemplate is not null) {
         @LoadingTemplate
     }
@@ -33,6 +34,5 @@ else if (!_loading) {
     }
 }
 
-<div style="@(_allItemsRetrieved ? "height:0;width:0" : "height:1px;width:1px;flex-shrink:0")" @ref="Element">
-</div>
+
 
