Add Virtualized Grid link and update RawCellContent method
- Added a new side navigation link for "Virtualized Grid" in `MainLayout.razor`.
- Updated `RawCellContent` method in `TnTTemplateColumn.cs` to return the string representation of the item.

--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -41,6 +41,7 @@
         <TnTSideNavMenuGroup Icon="@MaterialIcon.Grid4X4" ExpandByDefault="false" Label="Grids">
             <TnTSideNavLink Label="Grid" href="/datagrid" Icon="@MaterialIcon.GridView" />
             <TnTSideNavLink Label="Paginated Grid" href="/paginated" Icon="@MaterialIcon.GridOn" />
+            <TnTSideNavLink Label="Virtualized Grid" href="/virtualizedGrid" Icon="@MaterialIcon.GridGoldenratio" />
         </TnTSideNavMenuGroup>
         <TnTSideNavLink Label="Nested Layout" href="/nestedLayout" Icon="@MaterialIcon.NestCamWiredStand" />
         <TnTSideNavLink Label="Progress" href="/progress" Icon="@MaterialIcon.Propane" />
