Add VirtualizedGrid and refactor grid components
- Introduced `VirtualizedGrid.razor` for a new page with a virtualized data grid.
- Updated `LiveTest.csproj` to include references to `TnTComponents.AspNetCore` and `TnTComponents.Extensions`.
- Removed `IDisposable` from `TnTColumnBase.cs`, simplifying resource management.
- Replaced `Grid` property with `Context` in `TnTColumnBase.cs` for better context access.
- Updated `BuildRenderTree` in `TnTColumnBase.cs` to utilize the new `Context` for sorting.
- Improved header and cell rendering in `TnTDataGrid.razor`, removing unnecessary fragments.
- Refined pagination event handling in `TnTPaginationState.cs` with a new `EventCallbackSubscribable` mechanism.
- Enhanced overall structure and performance of grid and pagination components.

--- a/TnTComponents/Grid/TnTDataGrid.razor
+++ b/TnTComponents/Grid/TnTDataGrid.razor
@@ -40,7 +40,7 @@
                                                title="@col.Title"
                                                @key="@col" scope="col"
                                                TGridItem="TGridItem">
-                            @col.HeaderContent
+                            @col.RenderDefaultHeaderContent()
                         </TnTDataGridHeaderCell>
                     }
                 </tr>
@@ -60,7 +60,7 @@
                                             var col = _columns[colIndex];
 
                                             <TnTDataGridCell class="grid-cell-placeholder" @key="@col" GridColumn=@(colIndex+1) TGridItem="TGridItem">
-                                                @((RenderFragment)(b => col.RenderPlaceholderContent(b, new PlaceholderContext(i, ItemSize))))
+                                                @col.RenderPlaceholderContent(new(i, ItemSize))
                                             </TnTDataGridCell>
                                         }
                                     </TnTDataGridRow>
@@ -161,7 +161,7 @@
                 var col = _columns[colIndex];
 
                 <TnTDataGridCell class="grid-cell-placeholder" @key="@col" GridColumn=@(colIndex+1) TGridItem="TGridItem">
-                    @((RenderFragment)(__builder => col.RenderPlaceholderContent(__builder, placeholderContext)))
+                    @col.RenderPlaceholderContent(placeholderContext)
                 </TnTDataGridCell>
             }
         </TnTDataGridRow>
