--- a/LiveTest/LiveTest.Client/Components/FormTesting.razor
+++ b/LiveTest/LiveTest.Client/Components/FormTesting.razor
@@ -1,7 +1,7 @@
 ﻿@using System.ComponentModel.DataAnnotations
 @using TnTComponents
 
-@rendermode InteractiveAuto
+@rendermode @(new InteractiveWebAssemblyRenderMode(false))
 <div style="position:sticky;top:0;background-color:var(--tnt-color-surface)">
     <h3>FormTesting</h3>
     <label>
@@ -38,7 +38,7 @@
     <DataAnnotationsValidator />
     <ValidationSummary />
 
-    <TnTRow>
+     <TnTRow>
         <h3>
             Text @Input.Text
         </h3>
@@ -47,7 +47,7 @@
         </TnTColumn>
     </TnTRow>
 
-    <TnTRow>
+   <TnTRow>
         <h3>
             Numeric @Input.Integer @Input.Decimal
         </h3>
@@ -129,7 +129,7 @@
                 }
             </TnTInputSelect>
         </TnTColumn>
-    </TnTRow>
+    </TnTRow> 
 
     <TnTRow>
         <h3>
@@ -162,11 +162,8 @@
         <TnTColumn S="6">
             <TnTInputTextArea @bind-Value="@Input.Area" Placeholder="@_placeholder" Label="@_label" StartIcon="@_startIcon" EndIcon="@_endIcon" />
         </TnTColumn>
-    </TnTRow>
+    </TnTRow> 
 </TnTForm>
-
-
-
 
 @code {
     private sealed class InputModel {
@@ -227,7 +224,6 @@
     private bool _c;
     private bool _d;
     private bool _e;
-
     private TnTIcon? _startIcon => _b ? new MaterialIcon{ Icon = MaterialIcon.SavedSearch } : null;
     private TnTIcon? _endIcon => _c ? new MaterialIcon{ Icon = MaterialIcon.QrCode } : null;
     private string? _placeholder => _d ? "Placeholder" : null;
