Enhance markdown editing and update app interactivity
- Added a header to display input area value in `FormTesting.razor`.
- Replaced text area with `TnTMarkdownEditor` for improved editing.
- Updated `HeadOutlet` in `App.razor` to use `InteractiveAuto` mode.
- Removed `<HeadContent>` from `TnTMarkdownEditor.razor`.
- Updated `TnTMarkdownEditor.razor.js` to dynamically load CSS stylesheets.

--- a/LiveTest/LiveTest.Client/Components/FormTesting.razor
+++ b/LiveTest/LiveTest.Client/Components/FormTesting.razor
@@ -163,6 +163,16 @@
             <TnTInputTextArea @bind-Value="@Input.Area" Placeholder="@_placeholder" Label="@_label" StartIcon="@_startIcon" EndIcon="@_endIcon" />
         </TnTColumn>
     </TnTRow> 
+
+        <TnTRow>
+        <h3>
+            Input Area @Input.Area
+        </h3>
+
+        <TnTColumn S="6">
+            <TnTMarkdownEditor @bind-Value="@Input.Area" />
+        </TnTColumn>
+    </TnTRow> 
 </TnTForm>
 
 @code {
