--- a/LiveTest/LiveTest/Components/App.razor
+++ b/LiveTest/LiveTest/Components/App.razor
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
-    <HeadOutlet />
+    <HeadOutlet @rendermode="InteractiveAuto"/>
 </head>
 
 <body>
