Refactor theming system and introduce new components
- Replaced `TnTThemeDesign` with `TnTMeasurements` in `App.razor`.
- Added folder reference for theme files in `LiveTest.csproj`.
- Updated multiple CSS files to define theme color variables.
- Improved documentation for the `Theme` enum in `Theme.cs`.
- Added new CSS variables for layout in `style.scss`.
- Introduced `TnTMeasurements.razor` and `TnTMeasurements.razor.cs` for managing layout measurements.
- Created `TnTMeasurements.razor.js` for dynamic CSS variable application.
- Refactored `TnTThemeDesign.cs` to consolidate theming functionality.
- Enhanced `TnTThemeToggle` components for flexible theme selection.
- Refactored `TnTThemeToggle.razor.js` to encapsulate theme logic in a custom element.

--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -127,3 +127,9 @@ tnt-markdown-editor .initial-value {
 .tnt-fill-remaining {
     overflow-y: auto;
 }
+
+:root {
+    --tnt-footer-height: 64px;
+    --tnt-header-height: 64px;
+    --tnt-side-nav-width: 256px;
+}
