Add Hide parameter to TnTThemeToggle component
- Updated TnTThemeToggle.razor to include a new `style` attribute for conditional hiding based on the `Hide` parameter.
- Moved `data-permanent` attribute to a new line for clarity.
- Added a new boolean parameter `Hide` in TnTThemeToggle.razor.cs to control component visibility.
- Updated `JsModulePath` to include a version query string (`?v=2`).

--- a/TnTComponents/Theming/TnTThemeToggle.razor
+++ b/TnTComponents/Theming/TnTThemeToggle.razor
@@ -12,7 +12,8 @@
         tnt-dark-default="@DarkDefaultCss"
         tnt-dark-medium="@DarkMediumCss"
         tnt-dark-high="@DarkHighCss"
-        data-permanent>
+        data-permanent
+    style="@(Hide ? "display:none" :null)">
         <span class="tnt-icon material-symbols-outlined tnt-theme-toggle-icon"></span>
         <select title="Select Theme and Contrast" class="tnt-theme-select">
             @{
