--- a/TnTComponents/Anchor/TnTNavLink.razor.scss
+++ b/TnTComponents/Anchor/TnTNavLink.razor.scss
@@ -1,15 +1,21 @@
-﻿.tnt-components.tnt-nav-link {
+﻿@import '../Styles/_Variables/_typescale.scss';
+
+.tnt-nav-link {
     box-sizing: border-box;
     overflow: hidden;
     display: inline-flex;
-    position:relative;
+    position: relative;
 
     &:not(.tnt-underlined) {
         text-decoration: none;
     }
 
     &.tnt-filled, &.tnt-outlined {
-        @extend .tnt-label-large;
+        font-family: $tnt-typescale-label-large-font-family-name;
+        font-weight: $tnt-typescale-label-large-font-weight;
+        font-size: $tnt-typescale-label-large-font-size;
+        line-height: $tnt-typescale-label-large-line-height;
+        letter-spacing: $tnt-typescale-label-large-letter-spacing;
         user-select: none;
         appearance: none;
         min-height: 40px;
