--- a/TnTComponents/Styles/_Variables/_typescale.scss
+++ b/TnTComponents/Styles/_Variables/_typescale.scss
@@ -88,3 +88,132 @@ $tnt-typescale-title-small-font-weight: 500;
 $tnt-typescale-title-small-font-size: 14px;
 $tnt-typescale-title-small-line-height: 20px;
 $tnt-typescale-title-small-letter-spacing: 0.10px;
+
+
+@mixin tnt-display-large {
+    font-family: $tnt-typescale-display-large-font-family-name;
+    font-weight: $tnt-typescale-display-large-font-weight;
+    font-size: $tnt-typescale-display-large-font-size;
+    line-height: $tnt-typescale-display-large-line-height;
+    letter-spacing: $tnt-typescale-display-large-letter-spacing;
+}
+
+@mixin tnt-display-medium {
+    font-family: $tnt-typescale-display-medium-font-family-name;
+    font-weight: $tnt-typescale-display-medium-font-weight;
+    font-size: $tnt-typescale-display-medium-font-size;
+    line-height: $tnt-typescale-display-medium-line-height;
+    letter-spacing: $tnt-typescale-display-medium-letter-spacing;
+}
+
+@mixin tnt-display-small {
+    font-family: $tnt-typescale-display-small-font-family-name;
+    font-weight: $tnt-typescale-display-small-font-weight;
+    font-size: $tnt-typescale-display-small-font-size;
+    line-height: $tnt-typescale-display-small-line-height;
+    letter-spacing: $tnt-typescale-display-small-letter-spacing;
+}
+
+@mixin tnt-headline-large {
+    font-family: $tnt-typescale-headline-large-font-family-name;
+    font-weight: $tnt-typescale-headline-large-font-weight;
+    font-size: $tnt-typescale-headline-large-font-size;
+    line-height: $tnt-typescale-headline-large-line-height;
+    letter-spacing: $tnt-typescale-headline-large-letter-spacing;
+}
+
+@mixin tnt-headline-medium {
+    font-family: $tnt-typescale-headline-medium-font-family-name;
+    font-weight: $tnt-typescale-headline-medium-font-weight;
+    font-size: $tnt-typescale-headline-medium-font-size;
+    line-height: $tnt-typescale-headline-medium-line-height;
+    letter-spacing: $tnt-typescale-headline-medium-letter-spacing;
+}
+
+@mixin tnt-headline-small {
+    font-family: $tnt-typescale-headline-small-font-family-name;
+    font-weight: $tnt-typescale-headline-small-font-weight;
+    font-size: $tnt-typescale-headline-small-font-size;
+    line-height: $tnt-typescale-headline-small-line-height;
+    letter-spacing: $tnt-typescale-headline-small-letter-spacing;
+}
+
+@mixin tnt-body-large {
+    font-family: $tnt-typescale-body-large-font-family-name;
+    font-weight: $tnt-typescale-body-large-font-weight;
+    font-size: $tnt-typescale-body-large-font-size;
+    line-height: $tnt-typescale-body-medium-line-height;
+    letter-spacing: $tnt-typescale-body-large-letter-spacing;
+}
+
+@mixin tnt-body-medium {
+    font-family: $tnt-typescale-body-medium-font-family-name;
+    font-weight: $tnt-typescale-body-medium-font-weight;
+    font-size: $tnt-typescale-body-medium-font-size;
+    line-height: $tnt-typescale-body-medium-line-height;
+    letter-spacing: $tnt-typescale-body-medium-letter-spacing;
+}
+
+@mixin tnt-body-small {
+    font-family: $tnt-typescale-body-small-font-family-name;
+    font-weight: $tnt-typescale-body-small-font-weight;
+    font-size: $tnt-typescale-body-small-font-size;
+    line-height: $tnt-typescale-body-small-line-height;
+    letter-spacing: $tnt-typescale-body-small-letter-spacing;
+}
+
+@mixin tnt-label-large {
+    font-family: $tnt-typescale-label-large-font-family-name;
+    font-weight: $tnt-typescale-label-large-font-weight;
+    font-size: $tnt-typescale-label-large-font-size;
+    line-height: $tnt-typescale-label-large-line-height;
+    letter-spacing: $tnt-typescale-label-large-letter-spacing;
+}
+
+@mixin tnt-label-medium {
+    font-family: $tnt-typescale-label-medium-font-family-name;
+    font-weight: $tnt-typescale-label-medium-font-weight;
+    font-size: $tnt-typescale-label-medium-font-size;
+    line-height: $tnt-typescale-label-medium-line-height;
+    letter-spacing: $tnt-typescale-label-medium-letter-spacing;
+}
+
+@mixin tnt-label-small {
+    font-family: $tnt-typescale-label-small-font-family-name;
+    font-weight: $tnt-typescale-label-small-font-weight;
+    font-size: $tnt-typescale-label-small-font-size;
+    line-height: $tnt-typescale-label-small-line-height;
+    letter-spacing: $tnt-typescale-label-small-letter-spacing;
+}
+
+@mixin tnt-title-large {
+    font-family: $tnt-typescale-title-large-font-family-name;
+    font-weight: $tnt-typescale-title-large-font-weight;
+    font-size: $tnt-typescale-title-large-font-size;
+    line-height: $tnt-typescale-title-large-line-height;
+    letter-spacing: $tnt-typescale-title-large-letter-spacing;
+}
+
+@mixin tnt-title-medium {
+    font-family: $tnt-typescale-title-medium-font-family-name;
+    font-weight: $tnt-typescale-title-medium-font-weight;
+    font-size: $tnt-typescale-title-medium-font-size;
+    line-height: $tnt-typescale-title-medium-line-height;
+    letter-spacing: $tnt-typescale-title-medium-letter-spacing;
+}
+
+@mixin tnt-title-small {
+    font-family: $tnt-typescale-title-small-font-family-name;
+    font-weight: $tnt-typescale-title-small-font-weight;
+    font-size: $tnt-typescale-title-small-font-size;
+    line-height: $tnt-typescale-title-small-line-height;
+    letter-spacing: $tnt-typescale-title-small-letter-spacing;
+}
+
+@mixin tnt-typescale($font-weight, $font-size, $line-height, $font-tracking) {
+    font-family: 'Roboto', sans-serif;
+    font-weight: $font-weight;
+    font-size: $font-size;
+    line-height: $line-height;
+    letter-spacing: $font-tracking;
+}
