--- a/LiveTest/LiveTest.Client/Pages/FabButtons.razor
+++ b/LiveTest/LiveTest.Client/Pages/FabButtons.razor
@@ -2,6 +2,110 @@
 @using TnTComponents
 
 
-<LiveTest.Client.Components.FabButtonsComponent />
+@rendermode InteractiveAuto
+
+<label>
+    <input type="checkbox" @bind="ShowText" />
+    ShowText
+</label>
+<label>
+    <input type="checkbox" @bind="Disabled" />
+    Disabled
+</label>
+
+<label>
+    <input type="checkbox" @bind="StartIcon" />
+    Start Icon
+</label>
+
+<label>
+    <input type="checkbox" @bind="EndIcon" />
+    End Icon
+</label>
+
+<TnTDivider style="margin-top:36px;margin-bottom:36px;" />
+<TnTRow>
+    <TnTColumn S="12">
+        <TnTFabButton ButtonSize="Size.XS" Disabled="Disabled">
+            @if (StartIcon) {
+                <MaterialIcon Icon="@MaterialIcon.CloudySnowing" />
+            }
+            @if (ShowText) {
+                <text>Smallest</text>
+            }
+            @if (EndIcon) {
+                <MaterialIcon Icon="@MaterialIcon.SunnySnowing" />
+            }
+        </TnTFabButton>
+
+        <TnTFabButton ButtonSize="Size.Small" Disabled="Disabled">
+            @if (StartIcon) {
+                <MaterialIcon Icon="@MaterialIcon.CloudySnowing" />
+            }
+            @if (ShowText) {
+                <text>Small</text>
+            }
+
+            @if (EndIcon) {
+                <MaterialIcon Icon="@MaterialIcon.SunnySnowing" />
+            }
+        </TnTFabButton>
+
+        <TnTFabButton ButtonSize="Size.Medium" Disabled="Disabled">
+            @if (StartIcon) {
+                <MaterialIcon Icon="@MaterialIcon.CloudySnowing" />
+            }
+            @if (ShowText) {
+                <text>Medium</text>
+            }
+
+            @if (EndIcon) {
+                <MaterialIcon Icon="@MaterialIcon.SunnySnowing" />
+            }
+        </TnTFabButton>
+
+        <TnTFabButton ButtonSize="Size.Large" Disabled="Disabled">
+            @if (StartIcon) {
+                <MaterialIcon Icon="@MaterialIcon.CloudySnowing" />
+            }
+            @if (ShowText) {
+                <text>Large</text>
+            }
+
+            @if (EndIcon) {
+                <MaterialIcon Icon="@MaterialIcon.SunnySnowing" />
+            }
+        </TnTFabButton>
+
+        <TnTFabButton ButtonSize="Size.Largest" Disabled="Disabled">
+            @if (StartIcon) {
+                <MaterialIcon Icon="@MaterialIcon.CloudySnowing" />
+            }
+            @if (ShowText) {
+                <text>Largest</text>
+            }
+            @if (EndIcon) {
+                <MaterialIcon Icon="@MaterialIcon.SunnySnowing" />
+            }
+        </TnTFabButton>
+    </TnTColumn>
+</TnTRow>
+
+
+@code {
+
+
+    private ButtonAppearance Appearance { get; set; } = ButtonAppearance.Filled;
+
+    private ButtonShape Shape { get; set; } = ButtonShape.Round;
+
+    private bool Disabled { get; set; }
+
+    private bool StartIcon { get; set; }
+
+    private bool EndIcon { get; set; }
+
+    private bool ShowText { get; set; } = true;
+}
 
 
