--- a/TnTComponents/Buttons/TnTFabButton.razor.scss
+++ b/TnTComponents/Buttons/TnTFabButton.razor.scss
@@ -30,7 +30,11 @@
             height: 56px;
             min-width: 56px;
             border-radius: 16px;
-            gap: 8px;
+
+            &:has(> :last-child:nth-child(3)) {
+                gap: 8px;
+            }
+
             padding: 8px;
 
             @include typescale.tnt-typescale(500, 14px, 20px, 0.1px);
@@ -48,7 +52,11 @@
             height: 80px;
             min-width: 80px;
             border-radius: 20px;
-            gap: 12px;
+
+            &:has(> :last-child:nth-child(3)) {
+                gap: 12px;
+            }
+
             padding: 12px;
             @include typescale.tnt-typescale(500, 16px, 24px, 0.15px);
 
@@ -64,7 +72,11 @@
             height: 96px;
             min-width: 96px;
             border-radius: 28px;
-            gap: 16px;
+
+            &:has(> :last-child:nth-child(3)) {
+                gap: 16px;
+            }
+
             padding: 16px;
             @include typescale.tnt-typescale(400, 24px, 32px, 0);
 
