--- a/TnTComponents/Styles/_Variables/_elevation.scss
+++ b/TnTComponents/Styles/_Variables/_elevation.scss
@@ -11,11 +11,14 @@ $elevation-shadows: ( 0: none, 1: 0px 1px 2px var(--tnt-color-shadow), 2: 0px 2p
 //}
 
 @mixin tnt-elevation($height, $enable-hover: true) {
-    box-shadow: map.get($elevation-shadows, $height);
 
-    @if $enable-hover {
-        &:hover {
-            box-shadow: map.get($elevation-shadows, $height + 1);
+    &:not(.tnt-disabled) {
+        box-shadow: map.get($elevation-shadows, $height);
+
+        @if $enable-hover {
+            &:hover {
+                box-shadow: map.get($elevation-shadows, $height + 1);
+            }
         }
     }
 }
