--- a/TnTComponents/Layout/TnTLayout.razor
+++ b/TnTComponents/Layout/TnTLayout.razor
@@ -5,3 +5,9 @@
 <div @attributes="AdditionalAttributes" class="@ElementClass" style="@ElementStyle" lang="@ElementLang" id="@ElementId" title="@ElementTitle" @ref="Element">
     @ChildContent
 </div>
+<style>
+    body {
+        padding:0;
+        margin:0;
+    }
+</style>
