--- a/TnTComponents/Buttons/TnTFabButton.razor.scss
+++ b/TnTComponents/Buttons/TnTFabButton.razor.scss
@@ -31,7 +31,7 @@
             min-width: 56px;
             border-radius: 16px;
 
-            &:has(> :last-child:nth-child(3)) {
+            &:has(> :nth-child(3)) {
                 gap: 8px;
             }
 
@@ -53,7 +53,7 @@
             min-width: 80px;
             border-radius: 20px;
 
-            &:has(> :last-child:nth-child(3)) {
+            &:has(> :nth-child(3)) {
                 gap: 12px;
             }
 
@@ -73,7 +73,7 @@
             min-width: 96px;
             border-radius: 28px;
 
-            &:has(> :last-child:nth-child(3)) {
+            &:has(> :nth-child(3)) {
                 gap: 16px;
             }
 
